<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
    <groupId>com.viaoa</groupId>
    <artifactId>oaappstore</artifactId>
	<version>1.0.1</version>
	<packaging>jar</packaging>

	<name>OAAppStore</name>
	<description>
        OAAppStore.
    </description>

	<scm>
		<connection>scm:git:https://github.com/ViaOA/oaAppStore.git</connection>
		<developerConnection>scm:git:https://github.com/ViaOA/oaAppStore.git</developerConnection>
		<url>https://github.com/ViaOA/oaAppStore/tree/master</url>
	</scm>

	<url>http://www.viaoa.com</url>
	<inceptionYear>1999</inceptionYear>

	<licenses>
		<license>
			<name>OAAppStore License</name>
			<url>LICENSE.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<repositories>
	</repositories>

	<dependencies>
        <dependency>
            <groupId>com.viaoa</groupId>
            <artifactId>oa-jfc</artifactId>
            <version>3.7.8</version>
        </dependency>
        <dependency>
            <groupId>com.viaoa</groupId>
            <artifactId>oa-web</artifactId>
            <version>3.7.8</version>
        </dependency>

        <dependency>
            <groupId>javax.help</groupId>
            <artifactId>javahelp</artifactId>
            <version>2.0.05</version>
        </dependency>
        <dependency>
            <groupId>org.apache.derby</groupId>
            <artifactId>derby</artifactId>
            <version>10.16.1.1</version>
        </dependency>

        <dependency>
            <groupId>org.apache.derby</groupId>
            <artifactId>derbytools</artifactId>
            <version>10.16.1.1</version>
        </dependency>

		<!-- if using tomcat and removing jetty 
		<dependency> <groupId>javax.servlet</groupId> 
			<artifactId>javax.servlet-api</artifactId> <version>4.0.0</version> <scope>provided</scope> 
		</dependency>
        -->

        <!-- Jetty only (start) -->
        <dependency>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-server</artifactId>
            <version>9.4.19.v20190610</version>
        </dependency>

        <dependency>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-security</artifactId>
            <version>9.4.19.v20190610</version>
        </dependency>

        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>4.0.1</version>
        </dependency>

        <dependency>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-servlets</artifactId>
            <version>9.4.19.v20190610</version>
        </dependency>

        <dependency>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-servlet</artifactId>
            <version>9.4.19.v20190610</version>
        </dependency>

        <dependency>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>apache-jsp</artifactId>
            <version>9.4.19.v20190610</version>
        </dependency>

        <dependency>
            <groupId>org.mortbay.jasper</groupId>
            <artifactId>apache-el</artifactId>
            <version>8.5.24.2</version>
        </dependency>

        <dependency>
            <groupId>org.eclipse.jetty.toolchain</groupId>
            <artifactId>jetty-schemas</artifactId>
            <version>4.0.1</version>
        </dependency>

        <dependency>
            <groupId>javax.annotation</groupId>
            <artifactId>javax.annotation-api</artifactId>
            <version>1.3.2</version>
        </dependency>

        <dependency>
            <groupId>org.eclipse.jdt</groupId>
            <artifactId>ecj</artifactId>
            <version>3.13.102</version>
        </dependency>

        <dependency>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>apache-jstl</artifactId>
            <version>9.4.19.v20190610</version>
        </dependency>

        <dependency>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-http-spi</artifactId>
            <version>9.4.19.v20190610</version>
        </dependency>
        <!-- Jetty only (end) -->
        
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.25</version>
        </dependency>
   
        <dependency>
            <groupId>javax.xml.bind</groupId>
            <artifactId>jaxb-api</artifactId>
            <version>2.3.1</version>
        </dependency>
        <dependency>
          <groupId>javax.xml.ws</groupId>
          <artifactId>jaxws-api</artifactId>
          <version>2.3.1</version>
        </dependency>
        <dependency>
          <groupId>com.sun.xml.ws</groupId>
          <artifactId>jaxws-ri</artifactId>
          <version>2.3.2</version>
          <type>pom</type>
        </dependency>
	</dependencies>

	<build>
		<resources>
			<resource>
				<directory>src/main/java</directory>
				<excludes>
					<exclude>**/*.java/**</exclude>
				</excludes>
			</resource>
		</resources>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.5.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.14.1</version>
				<configuration>
					<skipTests>true</skipTests>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.0.2</version>
				<configuration>
					<archive>
						<manifestFile>manifest.mf</manifestFile>
						<manifest>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
							<mainClass>com.viaoa.appstore.control.StartupController</mainClass>
						</manifest>
						<manifestEntries>
							<Implementation-Title>OA</Implementation-Title>
							<Implementation-Vendor>ViaOA</Implementation-Vendor>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>


			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jarsigner-plugin</artifactId>
				<version>1.3.1</version>
				<executions>
					<execution>
						<id>sign</id>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<keystore>keystore/oaapp.jks</keystore>
					<alias>oaapp</alias>
					<storepass>viaoaapp</storepass>
					<keypass>viaoaapp</keypass>
                    <tsa>http://sha256timestamp.ws.symantec.com/sha256/timestamp</tsa>
				</configuration>
			</plugin>

            <!-- war not needed
			<plugin>
				<artifactId>maven-war-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<id>default-war</id>
						<phase>package</phase>
						<goals>
							<goal>war</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<archiveClasses>true</archiveClasses>
					<archive>
						<manifest>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
							<mainClass>com.viaoa.appstore.control.StartupController</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			-->


			<!-- 
				Note:  This will create a single "uber" jar with all of the dependencies (except oa-* jars)
				
				** make sure that the dependencies in this pom are the same as OATemplate project 
			-->

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>

                        <configuration>
                            <finalName>${project.artifactId}</finalName>
                            <transformers>
                                <transformer
                                    implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>com.viaoa.appstore.control.StartupController</mainClass>
                                </transformer>
                            </transformers>
                            
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                               
                                        <!-- 
                                            Only include non-OA and non-OAAppStore, 
                                            so that the uber.jar is only dependencies.
                                            There will be 2 jars created in the target directory, the one without a version is the 
                                            uber jar for the dependencies. 
                                            
                                            The uber jar will then be renamed to
                                            "dependency-uber-1.0.0.jar"
                                            and added to the OAAppstore-Run project
                                            in the "jarstore/com/viaoa" directory
                                        --> 
                                        <exclude>com/viaoa/oaappstore/**</exclude>
                                        <exclude>com/viaoa/**</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            
                        </configuration>
                    </execution>
                </executions>
            </plugin>


			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.6.0</version>
				<executions>
					<execution>
						<goals>
							<goal>exec</goal>
						</goals>
					</execution>
				</executions>

				<configuration>
					<executable>java</executable>
					<workingDirectory>runtime/server</workingDirectory>
					<arguments>
						<argument>-classpath</argument>
						<classpath />
						<argument>-Xmx2000m</argument>
						<argument>-XX:+PrintGC</argument>
						<argument>-XX:+PrintGCDetails</argument>
						<argument>-XX:+PrintGCTimeStamps</argument>
						<argument>-Xloggc:logs/gc.log</argument>
						<argument>com.viaoa.appstore.control.StartupController</argument>
						<argument>server</argument>
					</arguments>
				</configuration>
			</plugin>

		</plugins>
	</build>
</project>
